Issue #2272, aligned icon and fixed bug when Backup wasn't rendered because email contains number(s) (#2441)

--- a/extension/css/cryptup.css
+++ b/extension/css/cryptup.css
@@ -1327,7 +1327,7 @@ td {
 #backup_block label#toggle_pass_phrase.toggle_show_hide_pass_phrase {
   padding-top: 3px;
   margin-top: 1px;
-  height: 32px;
+  height: 37px;
 }
 #backup_block.backup .line { margin: 0; }
 
